--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && react-snapshot",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -35,6 +35,7 @@
     ]
   },
   "devDependencies": {
+    "react-snapshot": "^1.3.0",
     "standard": "^14.3.1"
   }
 }
